--- a/index.html
+++ b/index.html
@@ -67,67 +67,67 @@
          <li class="portfolio_button" data-filter="onepage">One Page</li>
          <li class="portfolio_button" data-filter="portfolio">Portfolio</li>
          <li class="portfolio_button" data-filter="animate">Animate</li>
-         <li class="portfolio_button" data-filter="wordpres">WordPress</li>
+         <li class="portfolio_button" data-filter="parallax">WordPress</li>
      </ul>
       
-     <div class="portfolio_box portfolio_filter html onepage wow zoomIn" data-wow-duration="2s"><img src="img/port3.png">
+     <div class="portfolio_box portfolio_filter html bootstrap wow zoomIn" data-wow-duration="2s"><img src="img/port3.png">
        <div class="overlay">
-         <a href="https://vatia60.github.io/maidul-portfolio/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="https://caela.cf"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
-     <div class="portfolio_box portfolio_filter html wow zoomIn" data-wow-duration="2s"><img src="img/port2.png">
+     <div class="portfolio_box portfolio_filter html onepage wow zoomIn" data-wow-duration="2s"><img src="img/port2.png">
          <div class="overlay">
          <a href="https://vatia60.github.io/maidul-portfolio/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
      <div class="portfolio_box portfolio_filter onepage wow zoomIn" data-wow-duration="2s"><img src="img/port3.png">
          <div class="overlay">
-         <a href="https://vatia60.github.io/maidul-portfolio/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="http://carouselslidernormal.cf"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
      <div class="portfolio_box portfolio_filter bootstrap wow zoomIn" data-wow-duration="2s"><img src="img/port4.png">
          <div class="overlay">
-         <a href=""><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="https://vatia60.github.io/corporate/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
-     <div class="portfolio_box portfolio_filter animate wow zoomIn" data-wow-duration="2s"><img src="img/port3.png">
+     <div class="portfolio_box portfolio_filter html animate wow zoomIn" data-wow-duration="2s"><img src="img/port3.png">
          <div class="overlay">
-         <a href="https://vatia60.github.io/maidul-portfolio/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="http://caela.cf/second.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
-     <div class="portfolio_box portfolio_filter wordpres wow zoomIn" data-wow-duration="2s"><img src="img/port1.png">
+     <div class="portfolio_box portfolio_filter bootstrap wow zoomIn" data-wow-duration="2s"><img src="img/port1.png">
          <div class="overlay">
-         <a href="https://vatia60.github.io/maidul/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="http://caela.cf/third.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
      <div class="portfolio_box portfolio_filter html wow zoomIn" data-wow-duration="2s"><img src="img/port2.png">
          <div class="overlay">
-         <a href="https://vatia60.github.io/maidul/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="http://caela.cf/normal.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
      <div class="portfolio_box portfolio_filter animate wow zoomIn" data-wow-duration="2s"><img src="img/port1.png">
          <div class="overlay">
-         <a href="https://vatia60.github.io/maidul/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="http://caela.cf/blog.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
-     <div class="portfolio_box portfolio_filter wordpres wow zoomIn" data-wow-duration="2s"><img src="img/port2.png">
+     <div class="portfolio_box portfolio_filter bootstrap wow zoomIn" data-wow-duration="2s"><img src="img/port2.png">
          <div class="overlay">
-         <a href=""><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="http://caela.cf/onepage.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
-     <div class="portfolio_box portfolio_filter wordpres wow zoomIn" data-wow-duration="2s"><img src="img/port3.png">
+     <div class="portfolio_box portfolio_filter bootstrap wow zoomIn" data-wow-duration="2s"><img src="img/port3.png">
          <div class="overlay">
-         <a href=""><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="http://caela.cf/work.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
      <div class="portfolio_box portfolio_filter animate wow zoomIn" data-wow-duration="2s"><img src="img/port1.png">
          <div class="overlay">
-         <a href="https://vatia60.github.io/maidul/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="http://caela.cf/faq.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
-     <div class="portfolio_box portfolio_filter wordpres wow zoomIn" data-wow-duration="2s"><img src="img/port1.png">
+     <div class="portfolio_box portfolio_filter html wow zoomIn" data-wow-duration="2s"><img src="img/port1.png">
          <div class="overlay">
-         <a href="https://vatia60.github.io/maidul/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="http://caela.cf/register.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
   </div>
