--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
          <li class="portfolio_button" data-filter="parallax">WordPress</li>
      </ul>
       
-     <div class="portfolio_box portfolio_filter html bootstrap wow zoomIn" data-wow-duration="2s"><img src="img/port3.png">
+     <div class="portfolio_box portfolio_filter html bootstrap wow zoomIn" data-wow-duration="2s"><img src="img/caela.cf.jpg">
        <div class="overlay">
          <a href="https://caela.cf"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
