--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
          <a href="http://caela.cf/normal.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
-     <div class="portfolio_box portfolio_filter animate wow zoomIn" data-wow-duration="2s"><img src="img/port1.png">
+     <div class="portfolio_box portfolio_filter animate wow zoomIn" data-wow-duration="2s"><img src="img/blog.cf.jpg">
          <div class="overlay">
          <a href="http://caela.cf/blog.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
