--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
       
      <div class="portfolio_box portfolio_filter html bootstrap wow zoomIn" data-wow-duration="2s"><img src="img/caela.cf.jpg">
        <div class="overlay">
-         <a href="https://caela.cf"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="https://vatia60.github.io/caela/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
      <div class="portfolio_box portfolio_filter html onepage wow zoomIn" data-wow-duration="2s"><img src="img/port2.png">
          <div class="overlay">
-         <a href="http://caela.cf/main.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="https://vatia60.github.io/caela/main.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
      <div class="portfolio_box portfolio_filter onepage wow zoomIn" data-wow-duration="2s"><img src="img/port3.png">
          <div class="overlay">
-         <a href="http://carouselslidernormal.cf"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="https://vatia60.github.io/caela/second.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
      <div class="portfolio_box portfolio_filter bootstrap wow zoomIn" data-wow-duration="2s"><img src="img/port4.png">
@@ -92,42 +92,42 @@
      </div>
      <div class="portfolio_box portfolio_filter html animate wow zoomIn" data-wow-duration="2s"><img src="img/port3.png">
          <div class="overlay">
-         <a href="http://caela.cf/second.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="https://vatia60.github.io/caela/second.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
      <div class="portfolio_box portfolio_filter bootstrap wow zoomIn" data-wow-duration="2s"><img src="img/port1.png">
          <div class="overlay">
-         <a href="http://caela.cf/third.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="https://vatia60.github.io/caela/third.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
      <div class="portfolio_box portfolio_filter html wow zoomIn" data-wow-duration="2s"><img src="img/port2.png">
          <div class="overlay">
-         <a href="http://caela.cf/normal.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="https://vatia60.github.io/caela/normal.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
      <div class="portfolio_box portfolio_filter animate wow zoomIn" data-wow-duration="2s"><img src="img/blog.cf.jpg">
          <div class="overlay">
-         <a href="http://caela.cf/blog.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="https://vatia60.github.io/caela/blog.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
      <div class="portfolio_box portfolio_filter bootstrap wow zoomIn" data-wow-duration="2s"><img src="img/port2.png">
          <div class="overlay">
-         <a href="http://caela.cf/onepage.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="https://vatia60.github.io/caela/onepage.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
      <div class="portfolio_box portfolio_filter bootstrap wow zoomIn" data-wow-duration="2s"><img src="img/port3.png">
          <div class="overlay">
-         <a href="http://caela.cf/work.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="https://vatia60.github.io/caela/work.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
      <div class="portfolio_box portfolio_filter animate wow zoomIn" data-wow-duration="2s"><img src="img/port1.png">
          <div class="overlay">
-         <a href="http://caela.cf/faq.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="https://vatia60.github.io/caela/faq.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
      <div class="portfolio_box portfolio_filter html wow zoomIn" data-wow-duration="2s"><img src="img/port1.png">
          <div class="overlay">
-         <a href="http://caela.cf/register.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="https://vatia60.github.io/caela/register.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
   </div>
