--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
       
      <div class="portfolio_box portfolio_filter html bootstrap wow zoomIn" data-wow-duration="2s"><img src="img/caela.cf.jpg">
        <div class="overlay">
-         <a href="https://vatia60.github.io/caela/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="http://matesworkforce.com.au/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
      <div class="portfolio_box portfolio_filter html onepage wow zoomIn" data-wow-duration="2s"><img src="img/port2.png">
          <div class="overlay">
-         <a href="https://vatia60.github.io/caela/main.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="http://freshexport.com.au/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
      <div class="portfolio_box portfolio_filter onepage wow zoomIn" data-wow-duration="2s"><img src="img/port3.png">
          <div class="overlay">
-         <a href="https://vatia60.github.io/caela/second.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="https://vatia60.github.io/caela"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
      <div class="portfolio_box portfolio_filter bootstrap wow zoomIn" data-wow-duration="2s"><img src="img/port4.png">
