--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
          <li class="portfolio_button" data-filter="parallax">WordPress</li>
      </ul>
       
-     <div class="portfolio_box portfolio_filter html bootstrap wow zoomIn" data-wow-duration="2s"><img src="img/caela.cf.jpg">
+     <div class="portfolio_box portfolio_filter html bootstrap wow zoomIn" data-wow-duration="2s"><img src="img/2.png">
        <div class="overlay">
          <a href="http://matesworkforce.com.au/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
-     <div class="portfolio_box portfolio_filter html onepage wow zoomIn" data-wow-duration="2s"><img src="img/port2.png">
+     <div class="portfolio_box portfolio_filter html onepage wow zoomIn" data-wow-duration="2s"><img src="img/1.png">
          <div class="overlay">
          <a href="http://freshexport.com.au/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
