--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
          <a href="http://freshexport.com.au/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
-     <div class="portfolio_box portfolio_filter onepage wow zoomIn" data-wow-duration="2s"><img src="img/port3.png">
+     <div class="portfolio_box portfolio_filter onepage wow zoomIn" data-wow-duration="2s"><img src="img/caela.cf.jpg">
          <div class="overlay">
          <a href="https://vatia60.github.io/caela"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
-     <div class="portfolio_box portfolio_filter bootstrap wow zoomIn" data-wow-duration="2s"><img src="img/port4.png">
+     <div class="portfolio_box portfolio_filter bootstrap wow zoomIn" data-wow-duration="2s"><img src="img/port3.png">
          <div class="overlay">
          <a href="https://vatia60.github.io/corporate/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
