--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-   <div class="preloader">
-    <div class="preloader_spin">
-      <h2>Welcome To Poor World</h2>
-    </div>
-  </div>
+   
   <header id="header">
       <div class="container">
   	 	 <div class="header_top">
@@ -75,6 +71,11 @@
          <a href="http://matesworkforce.com.au/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
+    <div class="portfolio_box portfolio_filter bootstrap wow zoomIn" data-wow-duration="2s"><img src="img/port3.png">
+         <div class="overlay">
+         <a href="http://imageworkingbd.com/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+       </div>
+     </div>		
      <div class="portfolio_box portfolio_filter html onepage wow zoomIn" data-wow-duration="2s"><img src="img/1.png">
          <div class="overlay">
          <a href="http://freshexport.com.au/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
@@ -85,19 +86,15 @@
          <a href="https://vatia60.github.io/caela"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
-     <div class="portfolio_box portfolio_filter bootstrap wow zoomIn" data-wow-duration="2s"><img src="img/port3.png">
-         <div class="overlay">
-         <a href="https://vatia60.github.io/corporate/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
-       </div>
-     </div>
+     
      <div class="portfolio_box portfolio_filter html animate wow zoomIn" data-wow-duration="2s"><img src="img/port3.png">
          <div class="overlay">
-         <a href="https://vatia60.github.io/caela/second.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="http://globalconnex.com.au/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
      <div class="portfolio_box portfolio_filter bootstrap wow zoomIn" data-wow-duration="2s"><img src="img/port1.png">
          <div class="overlay">
-         <a href="https://vatia60.github.io/caela/third.html"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="http://austship.com.au/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
        </div>
      </div>
      <div class="portfolio_box portfolio_filter html wow zoomIn" data-wow-duration="2s"><img src="img/port2.png">
